# SPlayer

./: .gitattributes  .gitignore  AGENTS.md  API_DOCUMENTATION.md  CLAUDE.md  Cargo.toml  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.env  ENVIRONMENT_SETUP.md  README.md  auto-eslint.mjs  auto-imports.d.ts  components.d.ts  default.conf  dev-app-update.yml  docker-compose.yml  docker-entrypoint.sh  electron-builder.config.ts  electron-builder.yml  electron.vite.config.1748341404293.mjs  electron.vite.config.1748419370730.mjs  electron.vite.config.1749460893245.mjs  electron.vite.config.ts  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vercel.json
.github/ISSUE_TEMPLATE/: bug.yml
.github/scripts/: prepare-release-assets.cjs
.github/workflows/: build.yml  dev.yml  issue-helper.yml  nightly.yml  release.yml  stale.yml
.trae/rules/: project_rules.md
api/: activities.db  app.py
docs/: API.md  api.md  contributing.md  guide.md  index.md  native.md
docs/.vitepress/: config.ts
docs/troubleshooting/: macos-arm-api.md  macos-damaged.md  macos.md  windows7.md
electron/main/: index.ts  ipcMain.ts  loginWin.ts  store.ts  utils.ts
electron/preload/: index.d.ts  index.ts
electron/server/: index.ts
native/discord-rpc-for-splayer/: Cargo.toml  index.d.ts
native/external-media-integration/: Cargo.toml  index.d.ts  package.json  rustfmt.toml
native/external-media-integration/src/: discord.rs  lib.rs  logger.rs  model.rs  scanner.rs
native/external-media-integration/src/sys_media/: linux.rs  macos.rs  mod.rs  windows.rs
native/ferrous-opencc-wasm/: package.json
native/mpris-for-splayer/: Cargo.toml  index.d.ts  index.js  package.json
native/mpris-for-splayer/src/: lib.rs
native/smtc-for-splayer/: .gitignore  Cargo.toml  index.d.ts  package.json  pnpm-lock.yaml
native/taskbar-lyric/: Cargo.toml  index.d.ts  package.json
native/taskbar-lyric/src/: lib.rs  logger.rs  registry_watcher.rs  service.rs  taskbar_created_watcher.rs  tray_watcher.rs  uia.rs  uia_watcher.rs  utils.rs
native/taskbar-lyric/src/strategy/: mod.rs  win10.rs  win11.rs
native/tools/: Cargo.toml  index.d.ts  package.json
native/tools/src/: analysis.rs  download.rs  lib.rs  linux.rs  macos.rs  scanner.rs  windows.rs
public/api/: activities.db  app.py
public/wasm/: decode-audio.wasm  ffmpeg.wasm
scripts/: build-native.mjs  build-native.ts  dev.mjs
src/: App.vue  config.ts  main.ts
src/api/: lastfm.ts  login.ts  other.ts  song.ts  user.ts
src/composables/: useInit.ts  useMobile.ts  useQualityControl.ts  useSongMenu.ts
src/hooks/: useIpcEvents.ts
src/layout/: AppLayout.vue
src/router/: index.ts  routes.ts
src/stores/: data.ts  local.ts  music.ts  setting.ts  shortcut.ts  status.ts  streaming.ts
src/style/: animate.scss  main.scss  media.scss
src/styles/: time-display.scss
src/types/: color.d.ts  desktop-lyric.d.ts  global.d.ts  ipc.d.ts  lyric.d.ts  main.d.ts  main.ts  settings.ts  smtc.ts  streaming.ts
src/utils/: assGenerator.ts  audioManager.ts  auth.ts  blob.ts  cache.ts  calc.ts  color.ts  cookie.ts  download.ts  downloadManager.ts  env.ts  fileUrl.ts  format.ts  helper.ts  init.ts  initIpc.ts  lastfmScrobbler.ts  log.ts  lyric.ts  lyricManager.ts  lyricParser.ts  lyricStripper.ts  meta.ts  modal.ts  opencc.ts  player.ts  protocal.ts  protocol.ts  request.ts  songManager.ts  style.ts  time.ts  timeFormat.ts  validate.ts  version.ts
src/views/: Browser.vue  Cloud.vue  DailySongs.vue  History.vue  (+1 more)
web/: lyric.html
(+299 files in other folders)
