[package]
name = "external-media-integration"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8", features = ["tokio_rt", "napi9"] }
napi-derive = "3.5"

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

discord-rich-presence = "1.0"

url = "2.5"

tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
features = ["Media_Playback", "Storage_Streams"]

[target.'cfg(target_os = "linux")'.dependencies.mpris-server]
version = "0.9.0"

[target.'cfg(target_os = "linux")'.dependencies.tempfile]
version = "3.24"

[build-dependencies]
napi-build = "2.3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
