[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0", features = ["tokio_rt", "napi4"] }
napi-derive = "3.0"
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "sync", "macros"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
futures-util = "0.3"
lofty = "0.22"
bytes = "1"
dashmap = "6"
tokio-util = "0.7"
once_cell = "1"

[build-dependencies]
napi-build = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
